changed code changes to work together,
