# models/members.js
@@ -1,43 +1,44 @@
 const mongoose = require("mongoose");
 
-const memberSchema = new mongoose.Schema({
-    firstName: {
-        type: String,
-        required: true
+const memberSchema = new mongoose.Schema(
+    {
+        firstName: {
+            type: String,
+            required: true
+        },
+        lastName: {
+            type: String,
+            required: true
+        },
+        phone: {
+            type: String,
+            required: true
+        },
+        email: {
+            type: String,
+            required: true,
+            unique: true,
+            lowercase: true,
+            trim: true
+        },
+        password: {
+            type: String,
+            required: true
+        },
+        status: {
+            type: String,
+            enum: ["active", "inactive"],
+            default: "active"
+        },
+        role: {
+            type: String,
+            enum: ["member", "admin"],
+            default: "member"
+        }
     },
-    lastName: {
-        type: String,
-        required: true
-    },
-    phone: {
-        type: String,
-        required: true
-    },
-    email: {
-        type: String,
-        required: true,
-        unique: true,
-        lowercase: true,
-        trim: true
-    },
-    password: {
-        type: String,
-        required: true
-    },
-    status: {
-        type: String,
-        enum: ["active", "inactive"],
-        default: "active"
-    },
-    role: {
-        type: String,
-        enum: ["member", "admin"],
-        default: "member"
+    {
+        timestamps: true
     }
-},
-{
-    timestamps: true
-}
 );
 
 module.exports = mongoose.model("Member", memberSchema);
